<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/id_img_info"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/teste3" />

    <TextView
        android:id="@+id/id_sistema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_img_info"
        android:layout_centerHorizontal="true"
        android:text="@string/sistema"
        android:textColor="@color/preto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_sistema"
        android:layout_centerHorizontal="true"
        android:text="@string/versao"
        android:textColor="@color/preto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_direitos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/direitos"
        android:textColor="@color/preto"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/id_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_direitos"
        android:layout_centerHorizontal="true"
        android:text="@string/empresa"
        android:textColor="@color/preto"
        android:textSize="12sp"
        android:textStyle="italic" />

</RelativeLayout>